fix: clientsList overlap responsiveness

--- a/src/app/(in)/schedule/components/ClientsList/ClientsList.module.sass
+++ b/src/app/(in)/schedule/components/ClientsList/ClientsList.module.sass
@@ -5,7 +5,7 @@
   border-radius: 8px
   height: 100%
   min-height: fit-content
-  position: relative
+  position: static
   box-shadow: 3px 3px 8px 0px #26262640
 
   &>header
@@ -26,5 +26,6 @@
     row-gap: 1rem
     overflow: visible
 
-  @media (min-width: 1024px) 
+  @media (min-width: 768px) 
     width: 35rem
+    position: relative
